# ex3Project

./: Board.cpp  Board.h  BoardCoordinates.h  CMakeLists.txt  Game.cpp  Game.h  GameLogic.cpp  GameLogic.h  GameParameters.cpp  GameParameters.h  Player.cpp  Player.h  StandartGameLogic.cpp  StandartGameLogic.h  main.cpp
src/: AIPlayer.cpp  AIPlayer.h  Board.cpp  Board.h  BoardCoordinates.cpp  Game.h  GameLogic.cpp  GameLogic.h  GameParameters.cpp  GameParameters.h  HumanPlayer.cpp  HumanPlayer.h  MiniMaxSimulator.cpp  MiniMaxSimulator.h  Player.cpp  Player.h  StandartGameLogic.cpp  StandartGameLogic.h  main.cpp
tests/: BoardTest.cpp  MiniMaxSimulatorTest.cpp  gtest_main.cpp
